attempts to avoid padding to simulate alignment

--- a/plugins/chat/assets/stylesheets/common/base-common.scss
+++ b/plugins/chat/assets/stylesheets/common/base-common.scss
@@ -3,7 +3,8 @@
   --full-page-border-radius: 12px;
   --full-page-sidebar-width: 275px;
   --channel-list-avatar-size: 30px;
-  --chat-header-offset: 46px;
+  --chat-header-offset: 45px;
+  --chat-header-expanded-offset: 0px;
 }
 
 // Very specific hack to ensure the contextual menu (copy/paste/...) is
